# dojo-nantes

./: .gitignore  README.md
2013-09-27-tennis/: README.md
2013-10-10/: README.md
2013-10-10/src/: ascenseur.js  omnibus.js
2013-10-10/test/: omnibus_test.js
2013-11-07/: README.md  TennisTest.hs
2013-11-21/: README.md
2013-11-21/src/: Demand.java  Lags.java  LagsTest.java
2013-12-12/: README.md  Tennis.hs  TennisTest.hs
2013/2013-09-27-tennis/: pom.xml
2013/2013-10-10/: README.md
2013/2013-11-07/: Tennis.hs
2013/2013-12-12/: Tennis.hs  TennisTest.hs
2014-01-16/: DecompositionMainTest.php  README.md
2014-01-30/: gilded_rose.rb
2014-03-20/: README.md  Tennis.hs
2014-05-16/: M.hs  README.md  Tests.hs
2014-06-06/: README.md  Tests.hs
2014-06-12/: pom.xml
2014-06-20/: .tests.s.swp  aunit.s  tests.s
2014-06-27/: Tests.hs
2014-07-03/: README.md
2014-07-04/: README.md
2014-10-02/: README.md  Tests.hs
2014/2014-01-16/: PokerHands.php  (+1 more)
2017-04-18/: README.md  TAGS  swcraft.cabal
2023-11-23/: README.md
2024-01-04/: day17.lisp
2024-02-01/: README.md
2024-04-11/: README.md  shell.nix
2024-05-23/: README.md
2024-06-06-Nantes/: index.ts  jest.config.json  package.json
2024/2024-04-11/: flake.nix  hello.cabal
2024/2024-04-11/test/: HelloSpec.hs
2025-01-30/: README.md  package-lock.json
2025-02-27/: README.md
2025-03-06/: README.md
2025-03-27/: README.md
dojo-virtuel/: README.md
tennis/: README.md
vm/: .gitignore  README.md  backend.tf  dojo.tf  dojo.tf.old  keys  provider.tf  scaleway.tf  ssh_keys  variables.tf
(+45 files in other folders)
