cabal-version:      2.4
name:               hello
version:            0.1.0.0
author:             Yvan Sraka
maintainer:         yvan@sraka.xyz

library
    exposed-modules: Hello
    build-depends:    base
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:      HelloSpec
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , hspec-core
    , QuickCheck
    , hello
  build-tool-depends: hspec-discover:hspec-discover
